[package]
name = "atom-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19.0", default-features = false, features = ['termion', 'serde'] }
log = "0.4.17"
termion = "2.0.1"
rand = "0.8.5"